--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -602,7 +602,7 @@
   icon: ""
 "238":
   name: "Stubborn"
-  description: "Special status for Obsidisus' skills, doesn't count as buff or debuff."
+  description: "Special status for Obsidius' skills, doesn't count as buff or debuff."
   isGoodStatus: 1
   icon: ""
 "239":
