--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -147,7 +147,7 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 
 # Obsidius S2
 1160102: "[base skill] Deal 50% of damage 2 times to random enemy/100%<br>\
-[Each hit] Incoming damage to random enemy increased by 1.5x for 1 next attack(s) /50%<br>\
+[Each hit] Apply {{ 12 | status_description }} for 1 next attack(s) /50%<br>\
 [When has more than 3 {{ 238 | status_description }} ] Deal 1 additional hit and remove 3 stack of {{ 238 | status_description }} /100%"
 
 # Obsidius S3
@@ -186,7 +186,7 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 [base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
 
 # Theoreol S3
-1161103: "[base skill] Incoming damage to all allies reduced by 0.5x for 1 next attack(s) /100%.<br>\
+1161103: "[base skill] Grants all allies {{ 2 | status_description }} for 1 next attack(s) /100%.<br>\
 [base skill] Grants all allies {{ 239 | status_description }} for 2 turns /100%"
 
 # Theoreol Passive
