--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -545,6 +545,21 @@
   description: "Number counter for the number of allies resurrected, start at 1, add 1 for every ally resurrected, reset at the end of turn"
   isGoodStatus: 2
   icon: ""
+"152":
+  name: "Invention: Atk up"
+  description: "Start with 3 turn, when turn is 0 grant target 10% atk up permanently, turn cannot be extended by any means."
+  isGoodStatus: 1
+  icon: "status_countdown_buff"
+"153":
+  name: "Invention: Def up"
+  description: "Start with 3 turn, when turn is 0 grant target 10% def up permanently, turn cannot be extended by any means."
+  isGoodStatus: 1
+  icon: "status_countdown_buff"
+"154":
+  name: "Invention: Recovery"
+  description: "Start with 3 turn, when turn is 0 recover target's hp by 20%, turn cannot be extended by any means."
+  isGoodStatus: 1
+  icon: "status_countdown_heal"
 "155":
   name: "Pursuit"
   description: "Random ally use skill 1 to target enemy."
