--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -192,6 +192,13 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 # Theoreol Passive
 8161101: "[In auto action] Prioritize the third skill when there is an ally with less than 50% HP"
 
+# Viscunam S2
+1125102: "[base skill] Add 2000 views /100%<br>\
+[base skill] Apply one of the following invention to target ( 
+{{ 152 | status_description }}, 
+{{ 153 status_description }}, 
+{{ 154 | status_description }} ) with a max of 5 stack for each type of invention /100%"
+
 # Vulpecula S1
 1065101: "[base skill] Deal 45% of damage to target enemy /100%<br>\
 [base skill] Decrease HP by -5% to target enemy for 2 turn(s) /60%<br>\
