--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -196,7 +196,7 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 1125102: "[base skill] Add 2000 views /100%<br>\
 [base skill] Apply one of the following invention to target ( 
 {{ 152 | status_description }}, 
-{{ 153 status_description }}, 
+{{ 153 | status_description }}, 
 {{ 154 | status_description }} ) with a max of 5 stack for each type of invention /100%"
 
 # Vulpecula S1
