--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -635,6 +635,11 @@
   description: "Incoming damage x1.2"
   isGoodStatus: 0
   icon: "status_defdown"
+"1014203":
+  name: "Excavation"
+  description: "Reduce stack by 1 every time target take damage, when 0 stack, remove excavation and apply def down+ (increase damage received by 1.8x) to target"
+  isGoodStatus: 2
+  icon: "status_costumedamage"
 "1015201":
   name: "Polaris Special1"
   description: "Act as number counter"
