--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -109,6 +109,11 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 Apply {{ 205 | status_description }} to all enemies /100%"
 8018202: ""
 
+# Marfik Bloom Passive
+8014201: "[when appearing] Apply 5 stack of {{ 1014203 | status_description }} to all enemies /100%<br>\
+[Turn start] (extra condition : {{ 1014203 | status_description }} = 0) Apply 5 stack of {{ 1014203 | status_description }} to enemies that fulfill the condition /100%"
+8014207: ""
+
 # Monomasa Variant Passive
 8031201: "[when appearing] Apply {{ 1031201 | status_description }} to self /100%<br>\
 [when enemy take damage] Apply {{ 1031206 | status_description }} to target enemy /100%"
