--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -650,6 +650,11 @@
   description: "Act as number counter"
   isGoodStatus: 2
   icon: ""
+"1020201":
+  name: "Atk Accumulation"
+  description: "Atk+10% for 3 turn, if atk accumulation already exist add atk+10% to existing accumulation and reset turn coung (max +100%)."
+  isGoodStatus: 2
+  icon: "b_skill_special"
 "1035101":
   name: "Multi Observation"
   description: "Exio special buff"
