--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -178,9 +178,9 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 [base skill] Remove 2 debuff(s) from target ally /100%  <br>\
 [base skill] If target has debuff, heal target by 50% own atk /100%"
 
+
 # Rakta variant S3
-1020203: "[base skill] Grants ATK accumulation (1.1x) to a single ally for 3 turns. If the target has ATK Accumulation,
-buffs up ATK Accumulation (up to 2x) /100% <br>\
+1020203: "[base skill] Grants {{ 1020201 | status_description }} to a single ally for 3 turns/100% <br>\
 [base skill] View consumption -1500 to all alies except self for one action /100%"
 
 # Ryekie variant S2 bloom passive
