--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -418,6 +418,11 @@
   description: "Works as a number counter so that Flamier doesn't use her skill till the enemy is dead"
   isGoodStatus: 2
   icon: ""
+"96":
+  name: "Goro Special"
+  description: "ATK of all allies +10% for each buff they possess (up to +50% ATK with 5 buffs). This effect does not stack with similar effects."
+  isGoodStatus: 1
+  icon: "status_atkup"
 "101":
   name: "Lilac Special"
   description: "Increase allies Atk by 2% for every 1 current combo(max 50%)"
@@ -563,6 +568,11 @@
 "155":
   name: "Pursuit"
   description: "Random ally use skill 1 to target enemy."
+  isGoodStatus: 2
+  icon: ""
+"158":
+  name: "Induce"
+  description: "Target ally use skill 1 to random enemy"
   isGoodStatus: 2
   icon: ""
 "164":
