--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -79,7 +79,7 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8124103: ""
 
 # Goro variant passive
-8023201: "[When caster is alive], ATK of all allies increases for another 10% for each buff they possess (up to extra 50% ATK with 5 buffs). This effect does not stack with similar effects."
+8023201: "[When caster is alive] Apply {{ 96 | status_description }} to all allies /100%"
 
 # Grigory S2
 1170102: "[base skill] Remove 1 debuff(s) from all allies /100%<br>\
