--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -173,6 +173,9 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 # Polaris Mask variant passive
 8015203: "[when posessing 0 {{ 1015203 | status_description }} ] Apply 1 Polaris Special2 to self and use skill 1 /100%"
 
+# Procy variant passive
+8032202: ""
+
 # Rakta S3 bloom active
 1020107: "[base skill] Apply {{ 8 | status_description }} target ally for 2 turn(s) /100% <br>\
 [base skill] Remove 2 debuff(s) from target ally /100%  <br>\
