--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -533,8 +533,13 @@
 "144":
   name: "Inspiration"
   description: "Gain 1 stack when damaged, remove all stack and gain 2000 vp for each stack at the start of action"
-  isGoodStatus: 2
+  isGoodStatus: 1
   icon: ""
+"147":
+  name: "Silence"
+  description: "Cannot use skill 3"
+  isGoodStatus: 2
+  icon: "status_skillct"
 "147":
   name: "Wandering Soul"
   description: "Activated by a special skill. Not a buff or debuff. Cannot be dispelled"
