Allow skillEffectJson and effects in Status description tpl

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -365,7 +365,7 @@
   icon: "b_skill_special" 
 "74":
   name: "Reduce view Cost"
-  description: "Reduce view cost by 1000"
+  description: "Reduce view cost by {{ effects.NeedViewValueChange.parameter.value | abs }}"
   isGoodStatus: 2
   icon: "status_awakening" 
 "75":
