--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -670,6 +670,11 @@
   description: "Atk+10%, if atk accumulation already exist add atk+10% to existing accumulation and reset turn count (max +100%)."
   isGoodStatus: 2
   icon: "status_firepower"
+"1034101":
+  name: "Huckle Special"
+  description: "Add 1 stack after huckle act again"
+  isGoodStatus: 2
+  icon: ""
 "1035101":
   name: "Multi Observation"
   description: "Exio special buff"
