--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -192,6 +192,9 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 1112101: "[base skill] {{ 13 | status_description }} to target enemy for 1 action(s) /100%.<br>\
 [base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
 
+# Shaft variant passive
+8063201: ""
+
 # Theoreol S3
 1161103: "[base skill] Grants all allies {{ 2 | status_description }} for 1 next attack(s) /100%.<br>\
 [base skill] Grants all allies {{ 239 | status_description }} for 2 turns /100%"
