--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -395,7 +395,7 @@
   icon: ""
 "86":
   name: "Vulpecula Special"
-  description: "Works as a number counter so that Vulpecula doesn't use his skill till the enemy is dead"
+  description: "Add 1 stack after using skill 1 follow up attack, if > 0 stack, prevent skill 1's follow up attack"
   isGoodStatus: 2
   icon: ""
 "87":
