--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -334,8 +334,8 @@
   isGoodStatus: 2
   icon: "" 
 "68":
-  name: "Okitaka Special (Hero)"
-  description: "Okitaka Special Effect for skill1"
+  name: "Okitaka Special"
+  description: "Act as number counter, when there is 1 stack Okitaka skill 1 will apply pursuit"
   isGoodStatus: 2
   icon: "" 
 "69":
