--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -612,7 +612,7 @@
   icon: ""
 "214":
   name: "Yoshiori Special"
-  description: "Apply taunt to self"
+  description: "Apply taunt effect only when self HP > 50% and have not acted this turn"
   isGoodStatus: 2
   icon: ""
 "215":
