--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -221,6 +221,10 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 [base skill] Apply {{ 8 | status_description }} to target ally for 1 action /100%<br>\
 [base skill] Apply {{ 1190101 | status_description }} to self for 3 turn /100%"
 
+# Yoshiori variant passive
+8072202: "[when taking damage] Apply {{ 213 | status_description }} to self for 1 turn(s) /100%<br>"
+8072203: ""
+
 # Zaniah S2
 1182102: "[base skill] Deal 60% of damage to target ally. Gain damage x400 worth of View. /100%<br>\
 [base skill] Apply  {{ 2 | status_description }} to target ally for 1 next attack(s) /100%<br>\
