--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -131,10 +131,10 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 [base skill] Apply {{ 1051202 | status_description }} to target allies for 2 turn /100%"
 
 # Nessen Variant S2
-1051202: "[base skill] Apply  Attack Up 1.5x to target ally for 1 next attack(s) /100%<br>\
+1051202: "[base skill] Apply {{ 1 | status_description }} to target ally for 1 next attack(s) /100%<br>\
 [base skill] Add 6000 views /100%<br>"
 
-1051204: "[base skill] Apply  Attack Up 1.5x to target ally for 1 next attack(s) /100%<br>\
+1051204: "[base skill] Apply {{ 1 | status_description }} to target ally for 1 next attack(s) /100%<br>\
 [base skill] Add 8000 views /100%<br>"
 
 # Nessen Variant S3
