--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -617,7 +617,7 @@
   icon: ""
 "215":
   name: "Inspire"
-  description: "Reduce skill 3 VP cost by 1000, removed after one turn, cannot be removed, neither buff nor debuff"
+  description: "Reduce skill 3 VP cost by 1000, removed after one turn, cannot be removed by other way, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
 "216":
