--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -189,6 +189,10 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 # Ryekie variant S2 bloom passive
 8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
 
+# Sadayoshi variant passive
+8081201: ""
+8081202: "[When buffed] Heal all allies except self by 5% of own atk /100%."
+
 # Santetsu S1
 1112101: "[base skill] {{ 13 | status_description }} to target enemy for 1 action(s) /100%.<br>\
 [base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
