--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -455,7 +455,7 @@
   icon: ""
 "116":
   name: "Critical Buff"
-  description: "Increase ATK by 1.3x at certain probability, propotional to the speed difference between self and target enemy. The chance is doubled if possessing SPD UP buff"
+  description: "Increase ATK by 1.3x at certain probability, proportional to the speed difference between self and target enemy. The chance is doubled if possessing SPD UP buff"
   isGoodStatus: 2
   icon: ""
 "118":
