--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -504,13 +504,13 @@
   isGoodStatus: 2
   icon: ""
 "136":
-  name: "Cerastium Special 1"
+  name: "No effect"
   description: "no effect"
   isGoodStatus: 2
   icon: ""
   wiki_hidden: true
 "137":
-  name: "Cerastium Special 2"
+  name: "No effect"
   description: "no effect"
   isGoodStatus: 2
   icon: ""
@@ -715,6 +715,16 @@
   description: "Start with 5 stack, when damage is taken, count -1, This is neither a buff nor debuff."
   isGoodStatus: 2
   icon: ""
+"1123101":
+  name: "Cerastium Special"
+  description: "When attacked, counter attack with skill 1 (max 2 times per turn)"
+  isGoodStatus: 2
+  icon: ""
+"1124105":
+  name: "Giansar Special"
+  description: "Less likely to be targeted by enemy"
+  isGoodStatus: 1
+  icon: "status_hide"
 "1169101":
   name: "Scorching Fire"
   description: "[Turn end] reduce 20% of max HP. Can be stacked even in quests with debuff duplication disabled."
