--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -24,6 +24,17 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
+# Cerastium S1
+1123101: "[base skill] Deal 60% of damage to target enemy /100%<br>\
+[base skill] Apply {{ 11 | status_description }} target enemy for 1 next attack(s) /40%"
+
+1123104: "[base skill] Deal 60% of damage to target enemy /100%<br>\
+[base skill] Apply {{ 11 | status_description }} target enemy for 1 next attack(s) /100%"
+
+# Cerastium Passive
+8123101: ""
+8123102: ""
+
 # Exio S2, passive
 1035102: "[base skill] For each {{ 1035101 | status_description }} status held, change skill view cost by -1000 for all allies except self for 1 turn(s) /100%<br>\
 [base skill] Remove all {{ 1035101 | status_description }} statuses /100%"
@@ -63,8 +74,7 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8169104: ""
 
 # Giansar S3, S3+
-1124102: "[base skill] target enemy will have higher chance of being targeted when opponent is in auto action mode for 1 turn/100%<br>\
-[base skill] Incoming damage to target enemy increased by 1.3x for 1 turn/100%<br>\
+1124102: "[base skill] Apply {{ 123 | status_description }} to target enemy for 1 turn/100%<br>\
 [base skill] (extra_cond: current action is not activated by another skill) Highest ATK ally (excluding self) uses skill 1 on random enemy/100%"
 1124103: "[base skill] Gain 2 combo(s) /100%<br>\
 [base skill] (extra_cond: Enemy count = 1) SPD Down by -30 to all enemies for 1 action(s) /100%<br>\
