--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -622,7 +622,12 @@
   icon: ""
 "216":
   name: "Yoshiori Special"
-  description: "Apply taunt to self"
+  description: "Apply taunt effect only when self HP > 50% and have not acted this turn"
+  isGoodStatus: 2
+  icon: ""
+"217":
+  name: "Tabit Special"
+  description: "Damage dealt by self +20% when target haven't acted this turn"
   isGoodStatus: 2
   icon: ""
 "221":
