--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -655,6 +655,11 @@
   description: "Incoming damage x1.2"
   isGoodStatus: 0
   icon: "status_defdown"
+"1001101":
+  name: "Fighting Spirit"
+  description: "Gain 1 stack when invoker cause damage to enemy, every stack increase atk by 2.5% (max 20 stack), neither buff nor debuff"
+  isGoodStatus: 1
+  icon: "status_system_firepower"
 "1014203":
   name: "Excavation"
   description: "Reduce stack by 1 every time target take damage, when 0 stack, remove excavation and apply def down+ (increase damage received by 1.8x) to target"
