--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -1,12 +1,21 @@
 
 # Sort by character name > original/variant/sidekick > skill
 
+# Akashi Bloom S1, passive
+
+1001105: "[When self S2 not active] Deal 70% of damage to target enemy /100%<br> \
+[When self skill 2 is active] Deal 80%-110% of damage to target enemy (depending on skill tree)/100%<br> \
+[When self skill 2 is active] (extra cond: current action is not activated by another skill) Deal 150% of damage to target enemy /100%<br> \
+[base skill] Apply {{ 19 | status_description }} to target enemy for 2 turns /40%-60% (depending on skill tree)"
+
+8001106: ""
+8001107: "[when invoker's attack causes damage to enemy] Apply {{ 1001101 | status_description }} to self /100%"
+
 # Alphecca variant S1
-1062201: "[base skill] Deal 80% of damage to target enemy /100%<br> \
-[base skill] (extra_cond: Combo is multiple of 5) Deal 50% of damage to all enemes /100%"
+1062201: "[base skill] Deal 80% of damage to target enemy /100% "
 
 # Alphecca variant Passive
-8062201: ""
+8062201: "[when combo is multiple of 5] Deal 50% of damage to all enemies /100%"
 8062202: ""
 
 # Andrew variant S3
