--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -254,6 +254,10 @@
 1015102: Mic Performance
 1015103: Polaris Buster!! 
 1015104: Polaris Buster!!+
+1015201: Meteor Lariat
+1015202: Ring-a-bell
+1015203: Polaris Bear Crusher!!
+1015204: Polaris Bear Crusher!!+
 1015105: Glittering Stars Back-Breaker+
 2015101: Two Platon
 2015102: Two Platon+
@@ -506,6 +510,10 @@
 1031102: Proteïkós Sóma
 1031103: Téras Prodosía
 1031104: Téras Prodosía+
+1031201: Dóro ágia Nýchtas
+1031202: Péfto Astéri Kai Skía
+1031203: Téras Symvaínoun
+1031204: Téras Symvaínoun+
 2031101: Kaibutsu Hunt
 2031102: Kaibutsu Hunt+
 2031103: Kaibutsu Hunt++
@@ -515,6 +523,7 @@
 3031104: Amorphous Form IV
 3031105: Amorphous Form V
 3031106: Amorphous Form VI
+8031201: Dóro ágia Nýchtas
 # Procy
 1032101: Money is Time
 1032102: Gold Rush Hour
@@ -1417,6 +1426,22 @@
 3190106: Dependable Disposition VI
 8190101: Omnes Clavis
 8190102: Yohack Auto
+# Astar
+1192101: Atˈvɛnt͜skrant͜s
+1192102: Christmas march
+1192103: Frohe Weihnachten
+1192104: Reserans+
+2192101: Stille Nacht
+2192102: Stille Nacht+
+2192103: Stille Nacht++
+3192101: Heat-trapping flames I
+3192102: Heat-trapping flames II
+3192103: Heat-trapping flames III
+3192104: Heat-trapping flames IV
+3192105: Heat-trapping flames V
+3192106: Heat-trapping flames VI
+8192101: Atˈvɛnt͜skrant͜s
+8192102: Astar Auto
 # Player
 2999101: Exceptional Good Luck
 2999102: Exceptional Good Luck+
