--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1427,10 +1427,10 @@
 8190101: Omnes Clavis
 8190102: Yohack Auto
 # Astar
-1192101: Atˈvɛnt͜skrant͜s
+1192101: Adventskranz
 1192102: Christmas march
 1192103: Frohe Weihnachten
-1192104: Reserans+
+1192104: Frohe Weihnachten+
 2192101: Stille Nacht
 2192102: Stille Nacht+
 2192103: Stille Nacht++
@@ -1440,7 +1440,7 @@
 3192104: Heat-trapping flames IV
 3192105: Heat-trapping flames V
 3192106: Heat-trapping flames VI
-8192101: Atˈvɛnt͜skrant͜s
+8192101: Adventskranz
 8192102: Astar Auto
 # Player
 2999101: Exceptional Good Luck
