--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -188,8 +188,13 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 # Polaris Mask S2 bloom passive
 8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
 
-# Polaris Mask variant passive
-8015203: "[when posessing 0 {{ 1015203 | status_description }} ] Apply 1 Polaris Special2 to self and use skill 1 /100%"
+# Polaris Mask variant S2, passive
+1015202: "[base skill] Heal self for 75% of own ATK value /100%<br>\
+[base skill] Reduce {{ 1015203 | status_description }} by 1 turn(s) /100%<br>\
+[base skill] Perform 1 more action (once per turn) /100%<br>\
+[base skill] Apply {{ 5 | status_description }} to self for 2 turn(s) /100%"
+8015201: "[when taking damage] Reduce {{ 1015203 | status_description }} by 1 turn(s) /100%"
+8015203: "[when posessing 0 {{ 1015203 | status_description }} ] Apply 1 {{ 1015204 | status_description }} to self and use skill 1 /100%"
 
 # Procy variant passive
 8032202: ""
