--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -378,6 +378,11 @@
   description: "Increase Atk by 2 times. Reduce 15% of self max HP at end of turn. Force auto action"
   isGoodStatus: 1
   icon: "status_berserk"
+"79":
+  name: "Atk Increase"
+  description: "When appearing, increase Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} % for all allies, cannot be stacked"
+  isGoodStatus: 2
+  icon: "status_atkup" 
 "82":
   name: "Concert"
   description: "Increase number of Views earned by View acquisition skill by 1.5 times"
