override okitaka passive
[ci skip]

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -185,6 +185,10 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 
 8160101: "[When buffed] Add 1 stack of {{ 238 | status_description }} to self /100%"
 
+# Okitaka passive
+8075101: ""
+8075102: ""
+
 # Polaris Mask S2 bloom passive
 8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
 
