Okitaka sk passive

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -325,9 +325,9 @@
   icon: "status_immunity" 
 "66":
   name: "Okitaka Special (Sidekick)"
-  description: "Count based on the number of times this take effect, triggered for a maximum of 5 times "
+  description: "Increase Atk by {{ effects.MultipleAttack.parameter.value | minus: 100 }} %, Count based on the number of times this take effect, triggered for a maximum of 5 times "
   isGoodStatus: 2
-  icon: "" 
+  icon: "status_atkup" 
 "67":
   name: "Victom Special"
   description: "Increase Atk by 0.5% for every 1000 current viewpoint for a maximum of 50%"
