Roiker SK passive

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -453,6 +453,11 @@
   description: "Incoming damage increased by 1.2x, Decrease ATK by 10%"
   isGoodStatus: 2
   icon: ""
+"114":
+  name: "Roiker Special"
+  description: "For each buff you have increase Atk by {{ effects.StatusNumberMultipleAttack.parameter.statusMult }} %, max 4 buff."
+  isGoodStatus: 2
+  icon: ""
 "115":
   name: "Santetsu Special"
   description: "Works as a number counter so that Santetsu doesn't has infinite turn"
