--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -455,7 +455,7 @@
   icon: ""
 "114":
   name: "Roiker Special"
-  description: "For each buff you have increase Atk by {{ effects.StatusNumberMultipleAttack.parameter.statusMult }} %, max 4 buff."
+  description: "Increase Atk by {{ effects.StatusNumberMultipleAttack.parameter.statusMult }} % for each buff you currently have, max 4 buff."
   isGoodStatus: 2
   icon: ""
 "115":
