--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -740,6 +740,11 @@
   description: "When attacked, counter attack with skill 1 (max 2 times per turn)"
   isGoodStatus: 2
   icon: ""
+"1124101":
+  name: "Giansar Special"
+  description: "Number counter, add 1 for every successful hide by this passive"
+  isGoodStatus: 2
+  icon: ""
 "1124105":
   name: "Giansar Special"
   description: "Less likely to be targeted by enemy"
