Sensettia sk passive

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -585,6 +585,11 @@
   description: "Random ally use skill 1 to target enemy."
   isGoodStatus: 2
   icon: ""
+"156":
+  name: "Recovery Skill"
+  description: "Increase HP recovery of recovery skill used by invoker by {{ effects.HealMultipleAttack.parameter.value | minus: 100 }} "
+  isGoodStatus: 2
+  icon: "status_attention"
 "158":
   name: "Induce"
   description: "Target ally use skill 1 to random enemy"
