--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -587,7 +587,7 @@
   icon: ""
 "156":
   name: "Recovery Skill"
-  description: "Increase HP recovery of recovery skill used by invoker by {{ effects.HealMultipleAttack.parameter.value | minus: 100 }} "
+  description: "Increase HP recovery of recovery skill used by invoker by {{ effects.HealMultipleAttack.parameter.value | minus: 100 }} %"
   isGoodStatus: 2
   icon: "status_attention"
 "158":
