--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -740,6 +740,11 @@
   description: "Act as number counter."
   isGoodStatus: 2
   icon: ""
+"1034102":
+  name: "Continuous Leap"
+  description: "Increase speed by 1 per stack, neither buff nor debuff"
+  isGoodStatus: 2
+  icon: "status_spdup"
 "1123101":
   name: "Cerastium Special"
   description: "When attacked, counter attack with skill 1 (max 2 times per turn)"
