--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -700,6 +700,11 @@
   description: "Atk+10%, if atk accumulation already exist add atk+10% to existing accumulation and reset turn count (max +100%)."
   isGoodStatus: 2
   icon: "status_firepower"
+"1033101":
+  name: "Sunlight"
+  description: "Atk+20% for 1 action"
+  isGoodStatus: 2
+  icon: "status_system_atkup"
 "1034101":
   name: "Huckle Special"
   description: "Add 1 stack after huckle act again"
