--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -705,6 +705,11 @@
   description: "Atk+20% for 1 action"
   isGoodStatus: 2
   icon: "status_system_atkup"
+"1033102":
+  name: "Fresh Green"
+  description: "When under 50% HP remove this status and heal by {{ effects.OneTimeHeal.parameter.value }} % Atk of the invoker of this status"
+  isGoodStatus: 2
+  icon: "status_regenerate"
 "1034101":
   name: "Huckle Special"
   description: "Add 1 stack after huckle act again"
