--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -216,6 +216,10 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 # Ryekie variant S2 bloom passive
 8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
 
+# Ryusei S2 
+1198102: "[base skill] Apply {{ 1 | status_description }} to highest Atk ally for 2 next attack(s) /100% <br>\
+[If enough VP] Apply {{ 1 | status_description }} to 2nd highest Atk ally for 2 next attack(s) /100% (doesn't gain VP for 2nd activation)"
+
 # Sadayoshi variant passive
 8081201: ""
 8081202: "[When buffed] Heal all allies except self by 5% of own atk /100%."
