--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -670,6 +670,16 @@
   description: "Incoming damage x1.2"
   isGoodStatus: 0
   icon: "status_defdown"
+"274":
+  name: "Fit"
+  description: "Increase Atk by 30% of receiver's base VP, min 500 up to 1500 Atk"
+  isGoodStatus: 0
+  icon: "status_atkup"
+"275":
+  name: "Barrier"
+  description: "Act as additional HP for the receiver, when taking damage Barrier HP will be reduced first, Barrier strength depends on the receiver's base VP (40% base VP, max 3000)"
+  isGoodStatus: 0
+  icon: "status_barrier"
 "1001101":
   name: "Fighting Spirit"
   description: "Gain 1 stack when invoker cause damage to enemy, every stack increase atk by 2.5% (max 20 stack), neither buff nor debuff"
