--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -800,3 +800,8 @@
   description: "Atk +20%."
   isGoodStatus: 2
   icon: ""
+"1199101":
+  name: "Forged"
+  description: "Increase Atk of all allies by 5% every 2 stack, neither a buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
