--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -805,3 +805,13 @@
   description: "Increase Atk of all allies by 5% every 2 stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"1122202":
+  name: "Limit"
+  description: "Increase S1,S2 and S3 damage by 15% per stack, neither a buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
+"1122205":
+  name: "Deccelerate"
+  description: "Reduce speed by 10 per stack, neither a buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
