--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -226,7 +226,7 @@ Also deal 50% of atk as damage to other enemies, when the other enemy has not ac
 1122204: "[base skill] Deal 60% of damage to target enemy /100% <br>\
 Remove 1 buff(s) from target enemy /100%"
 
-1000: "[When self has > 110 Speed and has no debuff] Change {{ 24 | status_description }} into Reboot <br>\
+1000: "[When self has >= 110 Speed and has no debuff] Change {{ 24 | status_description }} into Reboot <br>\
 Using Reboot will:<br>\
 [base skill] Apply {{ 1122202 | status_description }} to self for 1 turn(s) /100% <br>\
 [base skill] Apply {{ 1122205 | status_description }} to self for 1 turn(s) /100% <br>\
