--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -221,7 +221,7 @@ Remove 1 buff(s) from target enemy /60%"
 Apply {{ 13 | status_description }} to target enemy for 1 turn(s) /100%"
 
 1122203: "[base skill] Deal 130% of damage to target enemy /100% <br>\
-Also deal 50% of atk as damage to other enemies, when the other enemy has not acted yet this turn, this damage is increased by +50% of atk /100%"
+Also deal 50% of atk as damage to non target enemy, when the non target enemy has not acted yet this turn, this damage is increased further by +50% of atk /100%"
 
 1122204: "[base skill] Deal 60% of damage to target enemy /100% <br>\
 Remove 1 buff(s) from target enemy /100%"
@@ -233,7 +233,7 @@ Using Reboot will:<br>\
 [base skill] Perform 1 more action(s) /100% <br>\
 Max 3 times in 1 turn"
 
-8122201: "[Action end] (When enemy(s) has {{ 13 | status_description }} or {{ 29 | status_description }}) Deal 50% of damage to enemy with the condition"
+8122201: "[Action end] (When enemy(s) has {{ 13 | status_description }} or {{ 29 | status_description }}) Deal 50% of damage to enemy(s) with the debuff"
 
 8122203: ""
 
